Updated instructions